--- a/03do10/barra_navegação.html
+++ b/03do10/barra_navegação.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barra de navegação</title>
+    <title>Barra de Navegação</title>
     <link rel="stylesheet" href="estilizando.css">
 </head>
 
