--- a/03do10/index.html
+++ b/03do10/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula CSS</title>
+    <title>Livro</title>
     <link rel="stylesheet" href="estilizando.css">
     <!-- se quiser incluir css nessa mesma pagina de html sem ser externo é só acrescentar aqui
 entre as tags <style> -->
@@ -12,38 +12,104 @@ entre as tags <style> -->
 
 <body>
     <div class="bg"></div>
-    <h1>Princípios Do Web <br> Desing Maravilhoso</h1>
+    <h1>Princípios Do Web <br> Desing Maravilhoso</h1> <br>
+    <br>
+    <br>
+    <br>
     <h2>Ultimas Tendências</h2>
+    <br>
+    <P>
+        O texto fala que, para captar as últimas tendências de design, é bom tirar um tempo para explorar sites,
+        observar cores, texturas e estruturas de layout. A ideia é entender o que está sendo usado em termos de design,
+        como as caixas que estruturam o site, e perceber o que está em alta. Isso ajuda a ficar antenado nas tendências
+        de design para aplicar nos seus próprios projetos.
+
+    </P>
+    <br>
+    <br>
+    <br>
     <h3>Estilo Revista</h3>
+    <br>
     <P>
-        blabla
+        Esse estilo parece sugerir que, na internet, a gente consome as informações de forma rápida e fragmentada,
+        diferente de uma revista física, onde você lê tudo de uma vez. O desafio é que, se você quer que as pessoas
+        leiam todo o conteúdo, sem pular de página em página, talvez seja melhor evitar navegações longas e focar no
+        estilo contínuo, como se fosse um artigo de revista, sem distrações. Exemplos como o The Bold Italic e 52 Weeks
+        of UX seguem esse estilo, com pouca navegação e foco no conteúdo.
     </P>
-
+    <br>
+    <br>
+    <br>
     <h3>Rodapé Expansivo</h3>
+    <br>
     <P>
-        blublu
-    </P>
+        Esse ponto fala sobre como os rodapés de sites estão cada vez maiores e mais úteis. Antes, eles eram só para
+        avisos e direitos autorais, mas agora estão sendo usados para incluir links principais, informações de contato e
+        até redes sociais. Isso faz o rodapé se tornar um espaço estratégico, mas não deve ser o principal meio de
+        navegação do site. É uma tendência que continua a crescer.
 
+    </P>
+    <br>
+    <br>
+    <br>
     <h3>Minimalismo</h3>
+    <br>
     <P>
-       blibli
+        Aqui o texto compara o minimalismo no design de sites com o movimento artístico minimalista dos anos 60 e 70. A
+        ideia é cortar tudo que não for essencial e focar só no básico. Isso é uma resposta ao excesso de interatividade
+        da Web 2.0, como se fosse um alívio da confusão de tanta informação, tipo um café tranquilo depois de um dia
+        agitado. A lógica é que, se um elemento da página não estiver acrescentando algo, ele deve ser removido.
     </P>
-
+    <br>
+    <br>
+    <br>
     <h2>Redimensionamento: Layouts Fixo, Líquido ou Responsivo</h2>
+    <br>
+    <P>
+        Essa parte fala sobre como os layouts de sites devem se ajustar à janela do navegador. No design impresso, o
+        espaço é fixo, mas na web, o layout pode ser fixo ou adaptável. O layout fixo mantém uma largura específica e é
+        fácil de desenvolver, mas em janelas menores pode gerar barras de rolagem. O layout líquido usa porcentagens,
+        ajustando-se conforme o tamanho da tela, mas exige mais planejamento. Já o layout responsivo é uma mistura
+        desses conceitos, usando o CSS3 e media queries para ajustar o layout a diferentes larguras, o que é cada vez
+        mais necessário com o uso de dispositivos móveis.
+    </P>
+    <br>
+    <br>
+    <br>
     <h3>Largura Fixa</h3>
+    <br>
     <P>
-        blabla
+        Um layout de largura fixa é ideal para quem quer ter controle total sobre como o conteúdo será exibido. Ele
+        funciona bem em telas maiores, mas, em telas menores, aparece a barra de rolagem horizontal. Esse tipo de layout
+        é mais fácil de manter, porque o que você vê no Photoshop será exatamente o que você vai ver no navegador.
     </P>
-
+    <br>
+    <br>
+    <br>
     <h3>Largura Líquida</h3>
+    <br>
     <P>
-        blublu
+        No layout de largura líquida, o site se ajusta conforme o tamanho da janela, usando porcentagens ao invés de
+        pixels fixos. É mais flexível, mas pode gerar desafios em larguras muito pequenas ou muito grandes. O objetivo é
+        oferecer uma experiência melhor para o usuário, já que ele verá mais ou menos conteúdo dependendo do tamanho da
+        tela. É uma escolha ideal quando se quer priorizar a acessibilidade.
     </P>
-
+    <br>
+    <br>
+    <br>
     <h3>Uma Alternativa: Layout Responsivo</h3>
+    <br>
     <P>
-       blibli
+        A técnica de layout responsivo, destacada pelo Ethan Marcotte no artigo "Responsive Web Design", propõe que o
+        design se ajuste automaticamente às diferentes larguras de tela. Isso é essencial hoje, com a variedade de
+        dispositivos móveis. Ele usa tanto o redimensionamento fluido quanto media queries para reorganizar o layout
+        conforme a largura da tela muda.
     </P>
+    <br>
+    <br>
+    <br>
+    <br>
 
 </body>
+
 </html>
